--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,7 +5,7 @@
 @use "./wrapper";
 
 :root {
-  --gt-cookie-font-size: 14px;
+  --gt-cookie-font-size: 12px;
   --gt-cookie-bg: #ffffff;
   --gt-cookie-text: #000000;
   --gt-cookie-link-text: #ff0000;
