--- a/src/assets/scss/wrapper.scss
+++ b/src/assets/scss/wrapper.scss
@@ -21,7 +21,7 @@
   }
 
   :focus-visible {
-    opacity: 1;
+    // opacity: 1;
     outline: 2px dashed var(--gt-cookie-text) !important;
     outline-offset: 1px !important;
   }
